Cambios esteticos de navbar, campo de busqueda, opiniones y card de chatgpt

--- a/public/global.css
+++ b/public/global.css
@@ -61,3 +61,44 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+
+.opacity-5 {
+    opacity: 0.05;
+  }
+.opacity-25 {
+	opacity: 0.25;
+}
+.opacity-50 {
+	opacity: 0.5;
+}
+.opacity-75 {
+    opacity: 0.75;
+}
+.opacity-85 {
+	opacity: 0.85;
+}
+.opacity-95 {
+    opacity: 0.95;
+}
+
+.busqueda {
+	background-color: #ccc;
+	margin: 0rem;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+  }
+
+  .no-margin-botton{
+	  margin-bottom: -1rem;
+  }
+
+  .text-area {
+	background-color: #ccc;
+	margin: 1rem;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+	height: 200px;
+  }
